chore: initialize Spring Boot discodeit project setup