@@ -6,20 +6,18 @@ import com.sprint.mission.discodeit.repository.ChannelRepository;
 import java.io.*;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.util.ArrayList;
+import java.nio.file.Paths;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
-import java.util.stream.Stream;
 
 public class FileChannelRepository implements ChannelRepository {
     private final Path DIRECTORY;
-    private final String EXTENSION;
+    private final String EXTENSION = ".ser";
 
     public FileChannelRepository() {
-        this.DIRECTORY = Path.of("CHANNEL");
-        this.EXTENSION = ".ser";
-        if (!DIRECTORY.toFile().exists()) {
+        this.DIRECTORY = Paths.get(System.getProperty("user.dir"), "file-data-map", Channel.class.getSimpleName());
+        if (Files.notExists(DIRECTORY)) {
             try {
                 Files.createDirectories(DIRECTORY);
             } catch (IOException e) {
@@ -28,82 +26,75 @@ public class FileChannelRepository implements ChannelRepository {
         }
     }
 
+    private Path resolvePath(UUID id) {
+        return DIRECTORY.resolve(id + EXTENSION);
+    }
+
     @Override
     public Channel save(Channel channel) {
-        Path path = DIRECTORY.resolve(channel.getId() + EXTENSION);
-        try (FileOutputStream fos = new FileOutputStream(path.toFile());
-             ObjectOutputStream oos = new ObjectOutputStream(fos)) {
+        Path path = resolvePath(channel.getId());
+        try (
+                FileOutputStream fos = new FileOutputStream(path.toFile());
+                ObjectOutputStream oos = new ObjectOutputStream(fos)
+        ) {
             oos.writeObject(channel);
-            oos.flush();
-            return channel;
         } catch (IOException e) {
             throw new RuntimeException(e);
         }
+        return channel;
     }
 
     @Override
     public Optional<Channel> findById(UUID id) {
-        Channel channel;
-        Path path = DIRECTORY.resolve(id + EXTENSION);
-        try (FileInputStream fis = new FileInputStream(path.toFile());
-             ObjectInputStream ois = new ObjectInputStream(fis)) {
-            channel = (Channel) ois.readObject();
-            return Optional.of(channel);
-        } catch (IOException | ClassNotFoundException e) {
-            throw new RuntimeException(e);
+        Channel channelNullable = null;
+        Path path = resolvePath(id);
+        if (Files.exists(path)) {
+            try (
+                    FileInputStream fis = new FileInputStream(path.toFile());
+                    ObjectInputStream ois = new ObjectInputStream(fis)
+            ) {
+                channelNullable = (Channel) ois.readObject();
+            } catch (IOException | ClassNotFoundException e) {
+                throw new RuntimeException(e);
+            }
         }
+        return Optional.ofNullable(channelNullable);
     }
 
     @Override
     public List<Channel> findAll() {
-        if (Files.isDirectory(DIRECTORY)) {
-            try {
-                List<Channel> channels = Files.list(DIRECTORY)
-                        .filter(path -> path.toString().endsWith(EXTENSION))
-                        .map(paths -> {
-                                    try (FileInputStream fis = new FileInputStream(paths.toFile());
-                                         ObjectInputStream ois = new ObjectInputStream(fis)) {
-                                        Channel channel = (Channel) ois.readObject();
-                                        return channel;
-                                    } catch (IOException | ClassNotFoundException e) {
-                                        throw new RuntimeException(e);
-                                    }
-                                }
-                        )
-                        .toList();
-                return channels;
-            } catch (IOException e) {
-                throw new RuntimeException(e);
-            }
-        }
-        return new ArrayList<>();
-    }
-
-    @Override
-    public long count() {
-        try (Stream<Path> stream = Files.list(DIRECTORY)) {
-            return stream.filter(path -> (path.toString().endsWith(EXTENSION))).count();
-        } catch (IOException e) {
-            throw new RuntimeException(e);
-        }
-    }
-
-    @Override
-    public Channel delete(UUID id) {
-        Path path = DIRECTORY.resolve(id + EXTENSION);
         try {
-            Channel channel = findById(id).orElseThrow(() -> new RuntimeException("채널에서 해당 " + id + "를 찾을 수 없습니다."));
-            Files.deleteIfExists(path);
-            return channel;
+            return Files.list(DIRECTORY)
+                    .filter(path -> path.toString().endsWith(EXTENSION))
+                    .map(path -> {
+                        try (
+                                FileInputStream fis = new FileInputStream(path.toFile());
+                                ObjectInputStream ois = new ObjectInputStream(fis)
+                        ) {
+                            return (Channel) ois.readObject();
+                        } catch (IOException | ClassNotFoundException e) {
+                            throw new RuntimeException(e);
+                        }
+                    })
+                    .toList();
         } catch (IOException e) {
             throw new RuntimeException(e);
         }
-
     }
 
     @Override
     public boolean existsById(UUID id) {
-        Path path = DIRECTORY.resolve(id + EXTENSION);
+        Path path = resolvePath(id);
         return Files.exists(path);
+    }
+
+    @Override
+    public void deleteById(UUID id) {
+        Path path = resolvePath(id);
+        try {
+            Files.delete(path);
+        } catch (IOException e) {
+            throw new RuntimeException(e);
+        }
     }
 }
